# SparkStreamingCV

./: .gitignore  README.md  pyproject.toml  requirements.txt
bash_command/: fetch_model.sh  upload_model.sh
docker-img/: Dockerfile
helper/: CleanRequirementFile.py
k8s_pod_template/: README.md  custom_python_dependencies.yaml
model_training/: FetchModelFromMLFlow.py  FetchModelFromS3.py  Test.py  TrainVgg19FaceMask.py  TrainVgg19FaceMaskWithoutMlflow.py
notebook/: 9-spark-tensorflow.ipynb  FaceDetection.ipynb  FaceDetectionSSPLab.ipynb  FaceMaskDetection.ipynb  FaceMaskDetectionBatchModelMlFlowSSPLab.ipynb  FaceMaskDetectionBatchModelS3SSPLab.ipynb  FaceMaskDetectionBatchSSPLab.ipynb  FaceMaskDetectionLocal.ipynb  FaceMaskDetectionPatchSSPLab.ipynb  FaceMaskDetectionSSPLab.ipynb  FaceMaskDetectionStreamingSSPLab.ipynb  PodTemplateTest.ipynb
requirements/: datalabpy37-requirements.txt
sparkstreamingcv/: FaceDetection.ipynb  FaceDetection.py  FaceDetectionS3.py  FaceMaskDetectionAdvanceBatch.py  FaceMaskDetectionStreaming.py  MaskDetection.py  test.py
tests/: test_sparkstreamingcv.py
