[tool.poetry]
name = "SparkStreamingCV"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.1.1"
tensorflow = "^2.5.0"
pandas = "^1.2.4"
Pillow = "^8.2.0"
s3fs = "^2021.5.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
