[tool.poetry]
name = "SparkStreamingCV"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "3.8"
pyspark = {version="3.0.1", optional=true, extras=["sql"]}
tensorflow = "^2.5.0"
pandas = "^1.2.4"
Pillow = "^8.2.0"
s3fs = "^2021.5.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
deltalake = "0.4.8"
opencv-contrib-python = "^4.5.2"
matplotlib = "^3.4.2"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
