[tool.poetry]
name = "SparkStreamingCV"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "3.8"
pyspark = {version="3.0.1", optional=true, extras=["sql"]}
tensorflow = "^2.5.0"
pandas = "^1.2.4"
Pillow = "^8.2.0"
jupyter = "^1.0.0"
ipykernel = "^5.5.5"
deltalake = "0.4.8"
opencv-contrib-python = "^4.5.2"
matplotlib = "^3.4.2"
scipy = "^1.6.3"
boto3 = "^1.17.89"
mlflow = "^1.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# For python 3.7,

# pip install opencv-contrib-python
# pip install tensorflow

# AttributeError: module 'numpy.linalg.lapack_lite' has no attribute '_ilp64' It seems like default version 0.11.1 has a bug
# pip uninstall statsmodels -y
# pip install statsmodels==0.11.0

# maybe not needed
# sudo pip uninstall botocore